# pyxy

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pyxy_tester.py  run.py  run_coding.py  run_tagstr.py  tester.py
pyxy/: __init__.py  __main__.py  codec.py  coding.py  data.py  lang.py  main.py  tagstr.py  util.py
pyxy/grammar/: pyxy312.txt
pyxy/importer/: README.md  __main__.py  hook.py  installer.py
pyxy/pyxyimport/: README.md  __init__.py  hook.py
pyxy/run/: README.md  __main__.py  main.py  mapping.py  tools.py  util.py
pyxy_tests/: util.py
pyxy_tests/scripts/: .gitignore  script4.pyxy  script6.pyxy  script7.pyxy
test/: conftest.py  test_basic.py  test_grammar.py
test/coding_scripts/: script1.py  script3.py  script4.py  script6.py  script7.pyxy
test/markup_hacks/: __init__.py  script1.py  script2.py  script3.py  script4.py  script5.py
test/pyxy_scripts/: script1.pyxy  script2.pyxy  script5.pyxy  script7.pyxy
test/scripts/: basic1.py  basic2.py  basic3.py  basic4.py  basic5.py
test/tagstr_scripts/: basic1.py  script1.py
tests/: test_grammar.py
tests/pyxy_scripts/: script3.pyxy  script7.pyxy
